--- a/WebContent/d3-line/style.css
+++ b/WebContent/d3-line/style.css
@@ -1,6 +1,5 @@
 body {
-  background: white;
-  color: "#323232";
+  background-color: #323232;
   font-weight: 300;
   height: 100vh;
   margin: 0;
